cloud-infra-macros/tests/fails/zipfile_wrong_extension.rs
use cloud_infra_macros::zip_file;

fn example() {
    let file = zip_file!("package.tar.gz");
}

fn main() {}